# cg-course

./: .gitignore  .gitmodules  CMakeLists.txt  Gui.h  MyAnimatedCoordParams.cpp  MyAnimatedCoordParams.h  MyAnimatedCoordParams.ui  Utils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
lib/inc/: AnimatedCoordProperty.h  BaseSceneObject.h  BlurConfig.h  Camera.h  CoordPtr.h  IDrawer.h  IFactory.h  ISceneObject.h  ITransformation.h  ITransformationFactory.h  Model.h  Polygon.h  RenderContext.h  RenderVisitor.h  Scene.h  SceneObjectType.h  blur.h  cglib.h
lib/inc/blur/: AccumulateBlurStrategy.h  BlurConfig.h  IBlurStrategy.h  NeiborBlurStrategy.h  NoBlurStrategy.h  PixelBlurStrategy.h
lib/inc/loaders/: IModelLoader.h  ObjModelLoader.h
lib/inc/render/: BaseDrawer.h  BaseNoTrasformationSupportDrawer.h  IDrawer.h  RenderContext.h  RenderManager.h  RenderVisitor.h
lib/inc/scene/: AnimatedCoordProperty.h  BaseSceneObject.h  Camera.h  ISceneObject.h  IVisitor.h  Model.h  Polygon.h  Scene.h  SceneObjectType.h
lib/inc/utils/: CoordPtr.h  CoordWrapper.h  IBuffer.h  IColor.h  ICoord.h  IFactory.h  ITransformation.h  ITransformationFactory.h  Time.h
lib/src/: AccumulateBlurStrategy.cpp  AnimatedCoordProperty.cpp  BaseNoTrasformationSupportDrawer.cpp  BaseSceneObject.cpp  BlurConfig.cpp  Camera.cpp  Model.cpp  NeiborBlurStrategy.cpp  NoBlurStrategy.cpp  PixelBlurStrategy.cpp  Polygon.cpp  RenderManager.cpp  RenderVisitor.cpp  Scene.cpp  SceneObjectType.cpp
lib/src/blur/: AccumulateBlurStrategy.cpp  BlurConfig.cpp  NeiborBlurStrategy.cpp  NoBlurStrategy.cpp  PixelBlurStrategy.cpp
lib/src/loaders/: ObjModelLoader.cpp
lib/src/render/: BaseDrawer.cpp  BaseNoTrasformationSupportDrawer.cpp  RenderContext.cpp  RenderManager.cpp  RenderVisitor.cpp
lib/src/scene/: AnimatedCoordProperty.cpp  BaseSceneObject.cpp  Camera.cpp  Model.cpp  Polygon.cpp  Scene.cpp  SceneObjectType.cpp
math_glm/: CMakeLists.txt
math_glm/inc/: GlmCoord.h  GlmCoordFactory.h  GlmException.h  GlmTransformation.h  GlmTransformationFactory.h
math_glm/src/: GlmCoord.cpp  GlmTransformation.cpp  GlmTransformationFactory.cpp
ogl_drawer/: CMakeLists.txt
ogl_drawer/inc/: Buffers.h  OglColor.h  OglDrawer.h  OglWidget.h  RenderVisitor.h  Shaders.h  VisibleArea.h
ogl_drawer/src/: OglDrawer.cpp  RenderVisitor.cpp  Shaders.cpp
qp_drawer/: CMakeLists.txt
qp_drawer/inc/: MathUtilits.h  MatrixBuffer.h  QpColor.h  QpDrawer.h  QpEdge.h  QpSurface.h  QpWidget.h
qp_drawer/src/: MathUtilits.cpp  QpDrawer.cpp  QpWidget.cpp
shaders/: base.vs.glsl  colorDepth.fs.glsl  colorDepth.vs.glsl  gatherAll.fs.glsl  neighborMax.fs.glsl  pixelBlur.fs.glsl  tileMax.fs.glsl  velocity.fs.glsl  velocity.vs.glsl  viewer.fs.glsl
